# -AI-A2A-MCP-

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.memory  README.md  __init__.py  celery_app.py  config.py  docker-compose.yml  entrypoint.sh  main.py  memory_agent_main.py  pyproject.toml
a2a/: __init__.py  a2a_server.py
agent_bus/: __init__.py  circuit_breaker.py  error_handler.py  message.py  message_queue.py  pubsub.py  registry.py
agents/: __init__.py  plugin.py
cache/: __init__.py  query_cache.py
celery_tasks/: cache.py  maintenance.py  memory.py  monitor.py
common/: __init__.py
db/: __init__.py  attractions.json  attractions_flat.json  car_rental.csv  hotel.csv  insurance.csv  milvus_client.py  mysql_client.py  tour_group.csv  users.csv
frontend/: index.html
graph/: __init__.py  builder.py  langgraph_builder.py  state.py
llm/: __init__.py  client_pool.py
mcp/: __init__.py  enhanced_message.py  mcp_client.py  mcp_server.py
middleware/: __init__.py  error_handler.py  rate_limit.py  timeout.py  trace_id.py
models/: __init__.py  orm_models.py  schemas.py
prompts/: __init__.py  templates.py
scripts/: attractions_supplement.py  attractions_supplement_central.py  attractions_supplement_east.py  attractions_supplement_north.py  attractions_supplement_west.py  generate_attraction_data.py  generate_city_data.py  generate_flight_data.py  merge_attractions.py  seed_data.py
services/: __init__.py  memory_service.py  user_service.py
tests/: conftest.py  test_api.py  test_config.py  test_pipeline.py  test_services.py  (+4 more)
(+65 files in other folders)
